Fixed missing value on first load on mobile style

--- a/src/css/wikibox.css
+++ b/src/css/wikibox.css
@@ -6,3 +6,10 @@
   margin: 0 1.5rem 1rem;
   text-align: justify;
 }
+
+#wikibox-header,
+#wikibox-modal-city,
+.sheet-modal-inner,
+.wikibox-sheet {
+  height: 100%;
+}
